add api get may subscription active
